--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker|Rock+Salt">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  
+  <meta name="image" property="og:image" content="https://raw.githubusercontent.com/samuelfox1/RadCaTS-Karaoke/main/assets/screen5.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
